--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discord002">
+    <meta name="keywords" content="">
+    <meta name="author" content="">
+    <meta name="theme-color" content="#ffffff">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:title" content="Discord002">
+    <link rel="stylesheet" href="/media/css/liquidglass.css" type="text/css">
+    <title>Discord002</title>
+</head>
+<body>
+    <div id="glass">
+        <div id="window" type="starter">
+            <h1>Discord002</h1>
+          
+        </div>
+    </div>
+</body>
+</html>
