--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:title" content="Discord002">
     <link rel="stylesheet" href="/media/css/liquidglass.css" type="text/css">
+    <link rel="stylesheet" href="/media/css/main.css" type="text/css">
     <title>Discord002</title>
 </head>
 <body>
