--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discord002">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
     <meta name="theme-color" content="#ffffff">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- Open Graph -->
     <meta property="og:title" content="Discord002">
-    <link rel="stylesheet" href="/media/css/liquidglass.css" type="text/css">
-    <link rel="stylesheet" href="/media/css/main.css" type="text/css">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Discord002 Website">
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="/media/css/liquidglass.css">
+    <link rel="stylesheet" href="/media/css/main.css">
+
     <title>Discord002</title>
 </head>
 <body>
     <div id="glass">
-        <div id="window" type="starter">
+        <div id="window">
             <h1>Discord002</h1>
-          
         </div>
     </div>
 </body>
