--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property="og:description" content="Discord002 Website">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="/media/css/liquidglass.css">
-    <link rel="stylesheet" href="/media/css/main.css">
+    <link rel="stylesheet" href="media/css/liquidglass.css">
+    <link rel="stylesheet" href="media/css/main.css">
 
     <title>Discord002</title>
 </head>
