--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discord002">
+    <meta name="description" content="Discord002 Website">
     <meta name="theme-color" content="#ffffff">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!-- Open Graph -->
+    <!-- Open Graph / Social Media -->
     <meta property="og:title" content="Discord002">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Discord002 Website">
 
-    <!-- Styles -->
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="media/css/liquidglass.css">
     <link rel="stylesheet" href="media/css/main.css">
 
     <title>Discord002</title>
 </head>
 <body>
+    <!-- Main container with glass effect -->
     <div id="glass">
         <div id="window">
             <h1>Discord002</h1>
+            <!-- You can add a subtitle or description if needed -->
+            <p>Welcome to the Discord002 Website</p>
         </div>
     </div>
 </body>
