--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
     <meta name="theme-color" content="#ffffff">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!-- Open Graph / Social Media -->
+    <!-- Open Graph -->
     <meta property="og:title" content="Discord002">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Discord002 Website">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="media/css/liquidglass.css">
     <link rel="stylesheet" href="media/css/main.css">
 
     <title>Discord002</title>
 </head>
 <body>
-    <!-- Main container with glass effect -->
-    <div id="glass">
-        <div id="window">
-            <h1>Discord002</h1>
-            <!-- You can add a subtitle or description if needed -->
-            <p>Welcome to the Discord002 Website</p>
+
+    <!-- Main centered glass UI window -->
+    <div class="ui glass" style="width: 500px; height: 260px; flex-direction: column;">
+        <h1>Discord002</h1>
+        <p>Welcome to the Discord002 Website</p>
+
+        <!-- Optional button (example) -->
+        <div class="btn" style="margin-top: 20px;">
+            Learn More
         </div>
     </div>
+
 </body>
 </html>
