--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Discord002">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Discord002 Website">
+    <meta name="keywords" content="DISCORD002, DSCWEB, Discord for web02">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="media/css/main.css">
