--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="Discord002 Website">
     <meta name="keywords" content="DISCORD002, DSCWEB, Discord for web02">
+    <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="media/css/main.css">
