--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
 <body>
 
     <!-- Main centered glass UI window -->
-    <div class="ui glass" style="width: 500px; height: 260px; flex-direction: column;">
-        <h1>Discord002</h1>
-        <p>Welcome to the Discord002 Website</p>
-
-        <!-- Optional button (example) -->
-        <div class="btn" style="margin-top: 20px;">
-            Learn More
+    <div class="sidebar glass" style="width: 200px; height: 100vh; flex-direction: column;">
+        <div>
+            <img src="media/icon.png" style="width: 100vw; height: 50px; >
+            <!-- DATABASE CHANNELS -->
         </div>
     </div>
 
