--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Main centered glass UI window -->
     <div class="sidebar glass" style="width: 200px; height: 100vh; flex-direction: column;">
         <div>
-            <img src="media/icon.png" style="width: 100vw; height: 50px; >
+            <btn><img src="media/icon.png" alt="DISCORD002" style="width: 100vw; height: 50px;"></btn>
             <!-- DATABASE CHANNELS -->
         </div>
     </div>
