--- a/index.html
+++ b/index.html
@@ -11,22 +11,30 @@
     <meta property="og:title" content="Discord002">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Discord002 Website">
+
     <meta name="keywords" content="DISCORD002, DSCWEB, Discord for web02">
     <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
 
-    <!-- Stylesheets -->
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="media/css/main.css">
 
     <title>Discord002</title>
 </head>
 <body>
 
-    <!-- Main centered glass UI window -->
-    <div class="sidebar glass" style="width: 200px; height: 100vh; flex-direction: column;">
-        <div>
-            <btn><img src="media/icon.png" alt="DISCORD002" style="width: 100vw; height: 50px;"></btn>
-            <!-- DATABASE CHANNELS -->
+    <!-- Main glass sidebar -->
+    <div class="sidebar glass" style="width: 200px; height: 100vh; display: flex; flex-direction: column;">
+
+        <!-- Button containing image -->
+        <button class="sidebar-btn">
+            <img src="media/icon.png" alt="DISCORD002" style="width: 100%; height: auto;">
+        </button>
+
+        <!-- DATABASE CHANNELS -->
+        <div class="channels">
+            <!-- Add channels here -->
         </div>
+
     </div>
 
 </body>
