--- a/index.html
+++ b/index.html
@@ -20,22 +20,17 @@
 
     <title>Discord002</title>
 </head>
-<body>
+<div class="sidebar glass">
+    
+    <!-- Image Button -->
+    <button class="btn" style="width: 100%; padding: 0; background: none; border: none;">
+        <img src="media/icon.png" alt="DISCORD002" style="width: 100%; height: auto; border-radius: 0.5rem;">
+    </button>
 
-    <!-- Main glass sidebar -->
-    <div class="sidebar glass" style="width: 200px; height: 100vh; display: flex; flex-direction: column;">
+    <!-- Example Channel Button -->
+    <button class="btn"># general</button>
+    <button class="btn"># database</button>
 
-        <!-- Button containing image -->
-        <button class="sidebar-btn">
-            <img src="media/icon.png" alt="DISCORD002" style="width: 100%; height: auto;">
-        </button>
+</div>
 
-        <!-- DATABASE CHANNELS -->
-        <div class="channels">
-            <!-- Add channels here -->
-        </div>
-
-    </div>
-
-</body>
 </html>
