--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="sidebar glass">
     
     <!-- Image Button -->
-    <button class="btn" style="width: 100%; padding: 0; background: none; border: none;">
+    <button class="btn" style="width: 50px; height: 50px; padding: 0; background: none; border: none;">
         <img src="media/icon.png" alt="DISCORD002" style="width: 100%; height: auto; border-radius: 0.5rem;">
     </button>
 
