--- a/developersite.html
+++ b/developersite.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DevPortal | Discord002</title>
+  <link rel="stylesheet" href="media/css/main.css">
+</head>
+<body>
 
+<!-- Sidebar -->
+<div class="sidebar glass dev-sidebar">
+  <button class="btn img-btn">
+      <img src="media/icon.png" alt="DISCORD002">
+  </button>
+  <button class="btn" data-short="Docs">Docs</button>
+  <button class="btn" data-short="API">API</button>
+  <button class="btn" data-short="Guides">Guides</button>
+  <button class="btn" data-short="SDKs">SDKs</button>
+  <button class="btn" data-short="Changelog">Changelog</button>
+</div>
+
+<!-- Main Content -->
+<div class="content">
+  <header class="topbar glass">
+    <input type="text" placeholder="Search docs..." class="search">
+    <button class="btn">Sign In</button>
+  </header>
+
+  <main class="ui glass">
+    <h1>Welcome to Discord002 DevPortal</h1>
+    <p>Explore our API, guides, and SDKs to integrate Discord002 features into your apps.</p>
+
+    <section class="code-example">
+      <h2>Example: Get User Info</h2>
+      <pre><code>
+fetch("https://api.discord002.com/user/12345")
+  .then(res => res.json())
+  .then(data => console.log(data));
+      </code></pre>
+    </section>
+  </main>
+</div>
+
+</body>
+</html>
