--- a/developersite.html
+++ b/developersite.html
@@ -10,9 +10,9 @@
 
 <!-- Sidebar -->
 <div class="sidebar glass dev-sidebar">
-  <button class="btn img-btn">
-      <img src="media/icon.png" alt="DISCORD002">
-  </button>
+  <button class="btn" style="width: 50px; height: 50px; padding: 0; background: none; border: none;">
+        <img src="media/icon.png" alt="DISCORD002" style="width: 100%; height: auto; border-radius: 0.5rem;">
+    </button>
   <button class="btn" data-short="Docs">Docs</button>
   <button class="btn" data-short="API">API</button>
   <button class="btn" data-short="Guides">Guides</button>
