--- a/developersite.html
+++ b/developersite.html
@@ -11,8 +11,9 @@
 <!-- Sidebar -->
 <div class="sidebar glass dev-sidebar">
   <button class="btn" style="width: 50px; height: 50px; padding: 0; background: none; border: none;">
-        <img src="media/icon.png" alt="DISCORD002" style="width: 100%; height: auto; border-radius: 0.5rem;">
-    </button>
+    <img src="media/icon.png" alt="DISCORD002" style="width: 50px; height: 50px; border-radius: 0.5rem;">
+</button>
+
   <button class="btn" data-short="Docs">Docs</button>
   <button class="btn" data-short="API">API</button>
   <button class="btn" data-short="Guides">Guides</button>
