--- a/developersite.html
+++ b/developersite.html
@@ -6,42 +6,52 @@
   <title>DevPortal | Discord002</title>
   <link rel="stylesheet" href="media/css/main.css">
 </head>
-<body>
+<body class="dark-theme"> <!-- switch to "light-theme" for light mode -->
 
-<!-- Sidebar -->
-<div class="sidebar glass dev-sidebar">
-  <button class="btn" style="width: 50px; height: 50px; padding: 0; background: none; border: none;">
-    <img src="media/icon.png" alt="DISCORD002" style="width: 50px; height: 50px; border-radius: 0.5rem;">
-</button>
+  <!-- Sidebar -->
+  <aside class="sidebar glass dev-sidebar">
+    <!-- Logo -->
+    <button class="btn img-btn" style="width: 50px; height: 50px; padding: 0; border: none; background: none;">
+      <img src="media/icon.png" alt="DISCORD002" style="width: 50px; height: 50px; border-radius: 0.5rem;">
+    </button>
 
-  <button class="btn" data-short="Docs">Docs</button>
-  <button class="btn" data-short="API">API</button>
-  <button class="btn" data-short="Guides">Guides</button>
-  <button class="btn" data-short="SDKs">SDKs</button>
-  <button class="btn" data-short="Changelog">Changelog</button>
-</div>
+    <!-- Navigation Buttons -->
+    <button class="btn" data-short="Docs">Docs</button>
+    <button class="btn" data-short="API">API</button>
+    <button class="btn" data-short="Guides">Guides</button>
+    <button class="btn" data-short="SDKs">SDKs</button>
+    <button class="btn" data-short="Changelog">Changelog</button>
+  </aside>
 
-<!-- Main Content -->
-<div class="content">
-  <header class="topbar glass">
-    <input type="text" placeholder="Search docs..." class="search">
-    <button class="btn">Sign In</button>
-  </header>
+  <!-- Main Content -->
+  <main class="content">
+    <!-- Topbar -->
+    <header class="topbar glass">
+      <input type="text" placeholder="Search docs..." class="search">
+      <button class="btn">Sign In</button>
+    </header>
 
-  <main class="ui glass">
-    <h1>Welcome to Discord002 DevPortal</h1>
-    <p>Explore our API, guides, and SDKs to integrate Discord002 features into your apps.</p>
+    <!-- UI Box -->
+    <section class="ui glass">
+      <h1>Welcome to Discord002 DevPortal</h1>
+      <p>Explore our API, guides, and SDKs to integrate Discord002 features into your apps.</p>
 
-    <section class="code-example">
-      <h2>Example: Get User Info</h2>
-      <pre><code>
+      <!-- Code Example -->
+      <section class="code-example">
+        <h2>Example: Get User Info</h2>
+        <pre><code>
 fetch("https://api.discord002.com/user/12345")
   .then(res => res.json())
   .then(data => console.log(data));
-      </code></pre>
+        </code></pre>
+      </section>
     </section>
+
+    <!-- Example Notification -->
+    <div class="notification">
+      This is a notification!
+    </div>
   </main>
-</div>
 
 </body>
 </html>
