--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="media/css/main.css">
     <title>Discord002</title>
-    <link rel="stylesheet" href="media/css/
+    <link rel="stylesheet" href="media/css/auth.css">
 </head>
 <body class="dark-theme">
 
