--- a/developersite.html
+++ b/developersite.html
@@ -4,18 +4,64 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DevPortal | Discord002</title>
-  <link rel="stylesheet" href="media/css/main.css">
+  <link rel="stylesheet" href="media/css/developer.css">
+  <link rel="stylesheet" href="media/css/auth.css">
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js"></script>
+
+  <style>
+    /* Simple auth modal styling */
+    .auth-modal {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: #2e2e2e;
+      padding: 30px;
+      border-radius: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      z-index: 1000;
+      width: 300px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    }
+    .auth-modal input {
+      padding: 10px;
+      border-radius: 10px;
+      border: 1px solid #555;
+      background: #3a3a3a;
+      color: #fff;
+    }
+    .auth-modal button {
+      padding: 10px;
+      border-radius: 10px;
+      border: none;
+      background: #007aff;
+      color: white;
+      cursor: pointer;
+    }
+    .auth-error {
+      color: #ff6b6b;
+      font-size: 0.9rem;
+    }
+    .overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.5);
+      z-index: 999;
+    }
+  </style>
 </head>
-<body class="dark-theme"> <!-- switch to "light-theme" for light mode -->
+<body class="dark-theme">
 
   <!-- Sidebar -->
   <aside class="sidebar glass dev-sidebar">
-    <!-- Logo -->
     <button class="btn img-btn" style="width: 50px; height: 50px; padding: 0; border: none; background: none;">
       <img src="media/icon.png" alt="DISCORD002" style="width: 50px; height: 50px; border-radius: 0.5rem;">
     </button>
-
-    <!-- Navigation Buttons -->
     <button class="btn" data-short="Docs">Docs</button>
     <button class="btn" data-short="API">API</button>
     <button class="btn" data-short="Guides">Guides</button>
@@ -25,18 +71,15 @@
 
   <!-- Main Content -->
   <main class="content">
-    <!-- Topbar -->
     <header class="topbar glass">
       <input type="text" placeholder="Search docs..." class="search">
-      <button class="btn">Sign In</button>
+      <button class="btn" id="signInBtn">Sign In</button>
     </header>
 
-    <!-- UI Box -->
     <section class="ui glass">
       <h1>Welcome to Discord002 DevPortal</h1>
       <p>Explore our API, guides, and SDKs to integrate Discord002 features into your apps.</p>
 
-      <!-- Code Example -->
       <section class="code-example">
         <h2>Example: Get User Info</h2>
         <pre><code>
@@ -47,11 +90,75 @@ fetch("https://api.discord002.com/user/12345")
       </section>
     </section>
 
-    <!-- Example Notification -->
-    <div class="notification">
-      This is a notification!
-    </div>
+    <div class="notification">This is a notification!</div>
   </main>
+
+  <!-- Auth Modal -->
+  <div class="overlay" id="authOverlay" style="display:none;"></div>
+  <div class="auth-modal" id="authModal" style="display:none;">
+    <h2>Sign In / Register</h2>
+    <input type="email" id="authEmail" placeholder="Email">
+    <input type="password" id="authPass" placeholder="Password">
+    <button id="loginBtn">Login</button>
+    <button id="registerBtn">Register</button>
+    <p class="auth-error" id="authError"></p>
+    <button id="closeAuth" style="background:#ff3b30;">Close</button>
+  </div>
+
+  <script>
+    // Firebase config
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT.firebaseapp.com",
+      projectId: "YOUR_PROJECT_ID",
+    };
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.getAuth(app);
+
+    // Show modal
+    const overlay = document.getElementById('authOverlay');
+    const modal = document.getElementById('authModal');
+    document.getElementById('signInBtn').onclick = () => {
+      overlay.style.display = 'block';
+      modal.style.display = 'flex';
+    };
+    document.getElementById('closeAuth').onclick = () => {
+      overlay.style.display = 'none';
+      modal.style.display = 'none';
+    };
+
+    const authError = document.getElementById('authError');
+
+    // Login
+    document.getElementById('loginBtn').onclick = async () => {
+      const email = document.getElementById('authEmail').value;
+      const pass = document.getElementById('authPass').value;
+      try {
+        await firebase.signInWithEmailAndPassword(auth, email, pass);
+        authError.textContent = '';
+        alert(`Logged in as ${email}`);
+        overlay.style.display = 'none';
+        modal.style.display = 'none';
+      } catch (err) {
+        authError.textContent = err.message;
+      }
+    };
+
+    // Register
+    document.getElementById('registerBtn').onclick = async () => {
+      const email = document.getElementById('authEmail').value;
+      const pass = document.getElementById('authPass').value;
+      try {
+        await firebase.createUserWithEmailAndPassword(auth, email, pass);
+        authError.textContent = '';
+        alert(`Registered as ${email}`);
+        overlay.style.display = 'none';
+        modal.style.display = 'none';
+      } catch (err) {
+        authError.textContent = err.message;
+      }
+    };
+  </script>
 
 </body>
 </html>
