--- a/index.html
+++ b/index.html
@@ -1,172 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Discord002 Website">
-  <meta name="theme-color" content="#ffffff">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-  <meta property="og:title" content="Discord002">
-  <meta property="og:type" content="website">
-  <meta property="og:description" content="Discord002 Website">
-
-  <meta name="keywords" content="DISCORD002, DSCWEB, Discord for web02">
-  <link rel="icon" type="image/x-icon" href="media/favicon.ico">
-
-  <link rel="stylesheet" href="media/css/main.css">
-  <link rel="stylesheet" href="media/css/auth.css">
-  <title>Discord002</title>
-
-  <style>
-    /* Simplified inline styles for demo purposes */
-    body.dark-theme {
-      background: #121212;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      display: flex;
-    }
-
-    .sidebar {
-      width: 80px;
-      background: rgba(30,30,30,0.9);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 1rem 0;
-      gap: 1rem;
-    }
-
-    .sidebar .btn {
-      width: 60px;
-      height: 60px;
-      border: none;
-      background: none;
-      cursor: pointer;
-      color: #fff;
-      text-align: center;
-    }
-
-    .sidebar .btn img {
-      width: 100%;
-      border-radius: 0.5rem;
-    }
-
-    .content {
-      flex: 1;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .topbar {
-      width: 100%;
-      margin-bottom: 2rem;
-      display: flex;
-      justify-content: center;
-    }
-
-    .topbar .search {
-      width: 300px;
-      padding: 0.5rem;
-      border-radius: 0.5rem;
-      border: none;
-      outline: none;
-    }
-
-    .auth-box {
-      background: rgba(40,40,40,0.9);
-      padding: 2rem;
-      border-radius: 1rem;
-      width: 100%;
-      max-width: 400px;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-
-    .auth-box h2, .auth-box h3 {
-      margin: 0;
-      text-align: center;
-    }
-
-    .auth-input {
-      padding: 0.7rem;
-      border-radius: 0.5rem;
-      border: none;
-      outline: none;
-      width: 100%;
-    }
-
-    .btn {
-      padding: 0.7rem;
-      border-radius: 0.5rem;
-      border: none;
-      background: #5865F2;
-      color: #fff;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .btn:hover {
-      background: #4752c4;
-    }
-
-    .auth-error {
-      color: #ff4d4d;
-      font-size: 0.9rem;
-      text-align: center;
-    }
-
-    hr {
-      border: none;
-      border-top: 1px solid #555;
-      margin: 1rem 0;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Discord002 Auth</title>
+  
 </head>
-<body class="dark-theme">
-
-  <!-- Sidebar -->
-  <aside class="sidebar glass">
-    <button class="btn img-btn">
-      <img src="media/icon.png" alt="DISCORD002">
-    </button>
-    <button class="btn" data-short="#general"># general</button>
-    <button class="btn" data-short="#database"># database</button>
+<body>
+  <aside class="sidebar">
+    <button class="btn img-btn"><img src="media/icon.png" /></button>
   </aside>
 
-  <!-- Main Content -->
   <main class="content">
-
-    <div class="topbar glass">
-      <input type="text" class="search" placeholder="Search...">
-    </div>
-
-    <!-- AUTH UI -->
-    <section class="auth-box glass">
-
+    <section class="auth-box">
       <h2>Login</h2>
-      <input id="login-email" class="auth-input" type="email" placeholder="Email">
-      <input id="login-pass" class="auth-input" type="password" placeholder="Password">
+      <input id="login-email" class="auth-input" type="email" placeholder="Email" />
+      <input id="login-pass" class="auth-input" type="password" placeholder="Password" />
       <button class="btn" id="login-btn">Login</button>
       <p class="auth-error" id="login-error"></p>
 
-      <hr>
-      
+      <hr />
+
       <h3>Register</h3>
-      <input id="reg-email" class="auth-input" type="email" placeholder="Email">
-      <input id="reg-pass" class="auth-input" type="password" placeholder="Password">
+      <input id="reg-email" class="auth-input" type="email" placeholder="Email" />
+      <input id="reg-pass" class="auth-input" type="password" placeholder="Password" />
       <button class="btn" id="reg-btn">Create Account</button>
       <p class="auth-error" id="reg-error"></p>
-
     </section>
-
   </main>
 
-  <!-- Firebase SDK -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
@@ -185,38 +47,35 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // -------- LOGIN --------
     document.getElementById("login-btn").onclick = () => {
       const email = document.getElementById("login-email").value;
       const pass = document.getElementById("login-pass").value;
       const errorBox = document.getElementById("login-error");
 
       signInWithEmailAndPassword(auth, email, pass)
-        .then((userCredential) => {
+        .then((user) => {
           errorBox.textContent = "";
-          alert("Logged in as: " + userCredential.user.email);
+          alert("Logged in as: " + user.user.email);
         })
         .catch((err) => {
           errorBox.textContent = err.message;
         });
     };
 
-    // -------- REGISTER --------
     document.getElementById("reg-btn").onclick = () => {
       const email = document.getElementById("reg-email").value;
       const pass = document.getElementById("reg-pass").value;
       const errorBox = document.getElementById("reg-error");
 
       createUserWithEmailAndPassword(auth, email, pass)
-        .then((userCredential) => {
+        .then((user) => {
           errorBox.textContent = "";
-          alert("Account created: " + userCredential.user.email);
+          alert("Account created: " + user.user.email);
         })
         .catch((err) => {
           errorBox.textContent = err.message;
         });
     };
   </script>
-
 </body>
 </html>
